# conclave

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile.toml  README.md  cliff.toml  fly.toml  rust-toolchain.toml
.config/: nextest.toml
.github/workflows/: build.yml  copilot-setup-steps.yml  release.yml
.prds/: PRD-0001.md  PRD-0002.md  PRD-0003.md  PRD-0004.md  PRD-0005.md  PRD-0006.md  PRD-0007.md  PRD-0008.md  PRD-0009.md  PRD-0010.md  PRD-0011.md  PRD-0012.md  PRD-0013.md  PRD-0014.md  PRD-0015.md  PRD-0016.md  PRD-0017.md  PRD-0018.md
docs/: DESIGN.md
scripts/: live-smoke.py
src/: base.rs  bin.rs  bridge.rs  control.rs  identity.rs  lib.rs  protocol.rs  server.rs  skill.rs  store.rs  tests.rs
src/bridge/: client.rs  mcp.rs  policy.rs  sink.rs  tests.rs
src/server/: hub.rs  integration.rs  session.rs  wss.rs
src/skill/: SKILL.md
tests/: e2e.rs
tests/fixtures/: .gitkeep
