[package]
name = "conclave-cli"
version = "0.1.0"
edition = "2024"
resolver = "2"
authors = ["Aaron Roney <twitchax@gmail.com>"]
description = "Discord-for-agents: shared channels that let Claude Code sessions talk to each other over a central server."
license = "MIT"
repository = "https://github.com/twitchax/conclave"
readme = "README.md"
keywords = ["cli", "claude", "mcp", "agents", "chat"]
categories = ["command-line-utilities"]

# The published crate is `conclave-cli` (the bare `conclave` name is squatted),
# but the installed binary is still `conclave` (see DESIGN.md §20).
[lib]
name = "conclavelib"
path = "src/lib.rs"

[[bin]]
name = "conclave"
path = "src/bin.rs"

# Framework deps + the M1 substrate (wire protocol, identity, embedded store).
# Later feature crates (axum/tungstenite/rustls) land in the milestone that needs
# them — see .prds/PRD-0003..0006 and DESIGN.md §21.
[dependencies]
anyhow = "1"
base64 = "0.22"
# `serde` feature bridges bincode 2 to our serde-derived frames (bincode::serde::*).
bincode = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
# Ed25519 (and the ECDH / AEAD / HKDF primitives v2 E2E will need) via `ring` — one
# audited crypto dependency. `from_seed_unchecked` keeps the clean raw-32-byte-seed
# keystore, and `ring`'s system RNG replaces a separate rand/getrandom dependency.
ring = { version = "0.17", features = ["std"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
# Embedded SurrealDB via the bare SDK (no ORM). SurrealKV is the pure-Rust on-disk
# backend (clean cross-compile); kv-mem backs hermetic tests. DESIGN.md §15.
surrealdb = { version = "3", default-features = false, features = ["kv-mem", "kv-surrealkv"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "io-util"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "ansi"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"

# Lints live in the Cargo `[lints]` table so they apply DRY across lib + bin
# (DESIGN.md §22). Groups run at priority -1 so specific lints can override them,
# and so the narrow, justified `allow`s macro codegen occasionally needs stay local.
[lints.rust]
unused = { level = "deny", priority = -1 }

[lints.clippy]
correctness = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# Fast-iterate: release-like codegen without the expensive LTO / single-CGU link.
[profile.dev-release]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 16
debug = 1
strip = false

# Backs the Performance constitution's "measure hot paths with criterion":
# release optimizations, full debug info, no LTO so symbols stay legible.
[profile.profiling]
inherits = "release"
debug = 2
lto = false
strip = false
